@@ -364,7 +364,7 @@ int jtagmkII_send(PROGRAMMER * pgm, unsigned char * data, size_t len)
   unsigned char *buf;
 
   if (verbose >= 3)
-    fprintf(stderr, "\n%s: jtagmkII_send(): sending %zd bytes\n",
+    fprintf(stderr, "\n%s: jtagmkII_send(): sending %u bytes\n",
 	    progname, len);
 
   if ((buf = malloc(len + 10)) == NULL)
